--- a/game.html
+++ b/game.html
@@ -61,6 +61,22 @@ You can also find limited, holiday, seasonal, and event related gamepasses <a cl
 <img src="02289afaf4edc0d3e52a9bc17968e7c7.png" alt="Unable to load image." width="600" height="600">
 
 </div>
+    
+    <p><code>
+        Copyright 2021 Douglas Winters
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+        </code></p>
 
 </center>
 </body>
