--- a/form.html
+++ b/form.html
@@ -59,6 +59,22 @@ put them here.</p>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf-FwO5kB50FyHhLjpMDuB2p4pLj2ysiJZ9huH2kWbPB1xGFg/viewform?embedded=true" width="640" height="825" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 </div>
+    
+    <p><code>
+        Copyright 2021 Douglas Winters
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+        </code></p>
 
 </center>
 </body>
