--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ limitations under the License.
 
 <h2 class="pagetitle">Discord Server</h2>
 
-<iframe src="https://discord.com/widget?id=878338042992156702&theme=dark" width="500" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+<iframe src="https://discordapp.com/widget?id=903825868063932417&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 
 <h2 class="pagetitle">Roblox Groups</h2>
 
